ds-webapps: add Displaygruppen Ansicht im ds-manager
