# src/ds-webapps/src/apis/WebApiCore-swagger.json
@@ -18,7 +18,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Display"
+                    "$ref": "#/components/schemas/DisplayDto"
                   }
                 }
               },
@@ -26,7 +26,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Display"
+                    "$ref": "#/components/schemas/DisplayDto"
                   }
                 }
               },
@@ -34,7 +34,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Display"
+                    "$ref": "#/components/schemas/DisplayDto"
                   }
                 }
               }
@@ -85,7 +85,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/DisplayDto"
+                    "$ref": "#/components/schemas/DisplayExDto"
                   }
                 }
               },
@@ -93,7 +93,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/DisplayDto"
+                    "$ref": "#/components/schemas/DisplayExDto"
                   }
                 }
               },
@@ -101,7 +101,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/DisplayDto"
+                    "$ref": "#/components/schemas/DisplayExDto"
                   }
                 }
               }
@@ -128,7 +128,24 @@
         ],
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "$ref": "#/components/schemas/DisplayDto"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DisplayDto"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DisplayDto"
+                }
+              }
+            }
           }
         }
       },
@@ -231,17 +248,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisplayDto"
+                  "$ref": "#/components/schemas/DisplayExDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisplayDto"
+                  "$ref": "#/components/schemas/DisplayExDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DisplayDto"
+                  "$ref": "#/components/schemas/DisplayExDto"
                 }
               }
             }
@@ -3824,6 +3841,20 @@
         "additionalProperties": false
       },
       "DisplayDto": {
+        "required": [
+          "description",
+          "dummy",
+          "group",
+          "id",
+          "name",
+          "netAddress",
+          "notesAssignments",
+          "template",
+          "title",
+          "wolIpAddress",
+          "wolMacAddress",
+          "wolUdpPort"
+        ],
         "type": "object",
         "properties": {
           "id": {
@@ -3831,16 +3862,15 @@
             "format": "int32"
           },
           "name": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "title": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "template": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           },
           "styles": {
             "type": "string",
@@ -3851,42 +3881,128 @@
             "nullable": true
           },
           "group": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "controlUrl": {
             "type": "string",
             "nullable": true
           },
           "netAddress": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "wolIpAddress": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "wolMacAddress": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "wolUdpPort": {
             "type": "integer",
             "format": "int32"
           },
           "description": {
-            "type": "string",
-            "nullable": true
+            "type": "string"
           },
           "notesAssignments": {
             "type": "array",
             "items": {
               "$ref": "#/components/schemas/NoteAssignment"
-            },
-            "nullable": true
+            }
           },
           "dummy": {
             "type": "boolean"
+          }
+        },
+        "additionalProperties": false
+      },
+      "DisplayExDto": {
+        "required": [
+          "description",
+          "dummy",
+          "group",
+          "id",
+          "name",
+          "netAddress",
+          "notesAssignments",
+          "screenshotUrl",
+          "status",
+          "template",
+          "title",
+          "wolIpAddress",
+          "wolMacAddress",
+          "wolUdpPort"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "title": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "template": {
+            "type": "string"
+          },
+          "styles": {
+            "type": "string",
+            "nullable": true
+          },
+          "filter": {
+            "type": "string",
+            "nullable": true
+          },
+          "group": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "controlUrl": {
+            "type": "string",
+            "nullable": true
+          },
+          "netAddress": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "wolIpAddress": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "wolMacAddress": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "wolUdpPort": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "description": {
+            "type": "string"
+          },
+          "notesAssignments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/NoteAssignment"
+            }
+          },
+          "dummy": {
+            "type": "boolean"
+          },
+          "status": {
+            "$ref": "#/components/schemas/DisplayStatus"
+          },
+          "screenshotUrl": {
+            "minLength": 1,
+            "type": "string"
           }
         },
         "additionalProperties": false
